--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: IRIS Community
 description: IRIS Internal Site
 author: SH Jin
-logo: /hcz-jekyll-blog/static/img/avatar.png
+logo: /jins00.github.io/static/img/avatar.png
 github: https://github.com/jins00.github.io
 about: Freelance developer
 
