--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: IRIS Community
 description: IRIS Internal Site
 author: SH Jin
 logo: /jins00/static/img/mobigen_logo_small.png
-github: https://github.com/jins00.github.io
+github: https://github.com/jins00/jins00.github.io
 about: Freelance developer
 
 baseurl: ""
